vlib/v/checker/tests/generic_fn_decl_without_generic_names_err.out
vlib/v/checker/tests/generic_fn_decl_without_generic_names_err.vv:26:1: error: generic function declaration must specify generic type names, e.g. foo<T>
   24 | }
   25 |
   26 | fn g_worker(g Generic<T>) {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~
   27 |     t := <-g.ch
   28 |     handle(t)
vlib/v/checker/tests/generic_fn_decl_without_generic_names_err.vv:32:1: error: generic function declaration must specify generic type names, e.g. foo<T>
   30 | }
   31 |
   32 | fn handle(t T) {
      | ~~~~~~~~~~~~~~
   33 |     println("hi")
   34 | }

